Apply 5_1_jdk_21 patch